add method - SearchObjects
