# gen/grpc/go/schema.pb.gw.go
@@ -193,6 +193,76 @@ func local_request_StateGateService_GetObject_0(ctx context.Context, marshaler r
 
 }
 
+var (
+	filter_StateGateService_SearchObjects_0 = &utilities.DoubleArray{Encoding: map[string]int{"type": 0}, Base: []int{1, 1, 0}, Check: []int{0, 1, 2}}
+)
+
+func request_StateGateService_SearchObjects_0(ctx context.Context, marshaler runtime.Marshaler, client StateGateServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq SearchObjectOpts
+	var metadata runtime.ServerMetadata
+
+	var (
+		val string
+		ok  bool
+		err error
+		_   = err
+	)
+
+	val, ok = pathParams["type"]
+	if !ok {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "type")
+	}
+
+	protoReq.Type, err = runtime.String(val)
+	if err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "type", err)
+	}
+
+	if err := req.ParseForm(); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_StateGateService_SearchObjects_0); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := client.SearchObjects(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_StateGateService_SearchObjects_0(ctx context.Context, marshaler runtime.Marshaler, server StateGateServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq SearchObjectOpts
+	var metadata runtime.ServerMetadata
+
+	var (
+		val string
+		ok  bool
+		err error
+		_   = err
+	)
+
+	val, ok = pathParams["type"]
+	if !ok {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "type")
+	}
+
+	protoReq.Type, err = runtime.String(val)
+	if err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "type", err)
+	}
+
+	if err := req.ParseForm(); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_StateGateService_SearchObjects_0); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := server.SearchObjects(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
 func request_StateGateService_StreamEvents_0(ctx context.Context, marshaler runtime.Marshaler, client StateGateServiceClient, req *http.Request, pathParams map[string]string) (StateGateService_StreamEventsClient, runtime.ServerMetadata, error) {
 	var protoReq StreamOpts
 	var metadata runtime.ServerMetadata
@@ -232,7 +302,7 @@ var (
 )
 
 func request_StateGateService_SearchEvents_0(ctx context.Context, marshaler runtime.Marshaler, client StateGateServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
-	var protoReq SearchOpts
+	var protoReq SearchEventOpts
 	var metadata runtime.ServerMetadata
 
 	var (
@@ -275,7 +345,7 @@ func request_StateGateService_SearchEvents_0(ctx context.Context, marshaler runt
 }
 
 func local_request_StateGateService_SearchEvents_0(ctx context.Context, marshaler runtime.Marshaler, server StateGateServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
-	var protoReq SearchOpts
+	var protoReq SearchEventOpts
 	var metadata runtime.ServerMetadata
 
 	var (
@@ -366,6 +436,29 @@ func RegisterStateGateServiceHandlerServer(ctx context.Context, mux *runtime.Ser
 		}
 
 		forward_StateGateService_GetObject_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	mux.Handle("GET", pattern_StateGateService_SearchObjects_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/stategate.StateGateService/SearchObjects")
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_StateGateService_SearchObjects_0(rctx, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_StateGateService_SearchObjects_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -480,6 +573,26 @@ func RegisterStateGateServiceHandlerClient(ctx context.Context, mux *runtime.Ser
 
 	})
 
+	mux.Handle("GET", pattern_StateGateService_SearchObjects_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateContext(ctx, mux, req, "/stategate.StateGateService/SearchObjects")
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_StateGateService_SearchObjects_0(rctx, inboundMarshaler, client, req, pathParams)
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_StateGateService_SearchObjects_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	mux.Handle("GET", pattern_StateGateService_StreamEvents_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
@@ -528,6 +641,8 @@ var (
 
 	pattern_StateGateService_GetObject_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 1, 0, 4, 1, 5, 1, 2, 2, 1, 0, 4, 1, 5, 3}, []string{"api", "type", "state", "key"}, ""))
 
+	pattern_StateGateService_SearchObjects_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 1, 0, 4, 1, 5, 1, 2, 2}, []string{"api", "type", "state"}, ""))
+
 	pattern_StateGateService_StreamEvents_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 1, 0, 4, 1, 5, 1, 2, 2}, []string{"api", "type", "events"}, ""))
 
 	pattern_StateGateService_SearchEvents_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 1, 0, 4, 1, 5, 1, 2, 2, 1, 0, 4, 1, 5, 3}, []string{"api", "type", "events", "key"}, ""))
@@ -537,6 +652,8 @@ var (
 	forward_StateGateService_SetObject_0 = runtime.ForwardResponseMessage
 
 	forward_StateGateService_GetObject_0 = runtime.ForwardResponseMessage
+
+	forward_StateGateService_SearchObjects_0 = runtime.ForwardResponseMessage
 
 	forward_StateGateService_StreamEvents_0 = runtime.ForwardResponseStream
 
